# physense-qm

./: README.md  pyproject.toml
.github/workflows/: tests.yaml
src/physense_qm/: __init__.py  eigensolver.py  evolution.py  observables.py  orbitals.py  potentials.py  system.py  wavepacket.py
tests/: test_eigensolver.py  test_evolution.py  test_orbitals.py  test_potentials.py
