[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "physense-qm"
version = "0.1.0"
description = "Quantum mechanics simulations for the Physense platform"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Tanguy Marsault" }]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "physense-utils @ git+https://github.com/Tampipo/physense-utils",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/physense_qm"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=physense_qm --cov-report=term-missing"

[tool.coverage.run]
source = ["src/physense_qm"]
